--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -40,7 +40,7 @@
 
         <h2>{{ site.data.nav.docs_list_title }}</h2>
         <ul>
-           {% for item in site.data.samplelist.docs %}
+           {% for item in site.data.nav.docs %}
               <li><a href="{{ item.url }}">{{ item.title }}</a></li>
            {% endfor %}
         </ul>
